feat: Add MongoDB and Superlinked server support

--- a/amazon_search.ipynb
+++ b/amazon_search.ipynb
@@ -21,7 +21,7 @@
     "import pandas as pd\n",
     "from superlinked import framework as sl\n",
     "\n",
-    "from product_search import index, preprocessing, queries"
+    "from product_search import index, preprocessing, query"
    ]
   },
   {
@@ -372,7 +372,7 @@
    ],
    "source": [
     "results = app.query(\n",
-    "    queries.filter_query,\n",
+    "    query.filter_query,\n",
     "    natural_query=\"books with a price lower than 100\",\n",
     "    limit=3,\n",
     ")\n",
@@ -506,7 +506,7 @@
    ],
    "source": [
     "results = app.query(\n",
-    "    queries.filter_query,\n",
+    "    query.filter_query,\n",
     "    natural_query=\"books with a price lower than 100 and a rating bigger than 4\",\n",
     "    limit=3,\n",
     ")\n",
@@ -649,7 +649,7 @@
    ],
    "source": [
     "results = app.query(\n",
-    "    queries.semantic_query,\n",
+    "    query.semantic_query,\n",
     "    natural_query=\"books with a price lower than 100\",\n",
     "    limit=3,\n",
     ")\n",
@@ -795,7 +795,7 @@
    ],
    "source": [
     "results = app.query(\n",
-    "    queries.semantic_query,\n",
+    "    query.semantic_query,\n",
     "    natural_query=\"books with a price lower than 100 and a rating bigger than 4\",\n",
     "    limit=3,\n",
     ")\n",
@@ -936,7 +936,7 @@
     }
    ],
    "source": [
-    "df[df['asin'] == 'B07WP4RXHY'][\"description\"]"
+    "df[df[\"asin\"] == \"B07WP4RXHY\"][\"description\"]"
    ]
   },
   {
@@ -969,7 +969,7 @@
    ],
    "source": [
     "results = app.query(\n",
-    "    queries.similar_items_query,\n",
+    "    query.similar_items_query,\n",
     "    natural_query=\"similar books to B07WP4RXHY with a rating bigger than 4.5\",\n",
     "    limit=3,\n",
     ")\n",
