--- a/eda.ipynb
+++ b/eda.ipynb
@@ -256,6 +256,28 @@
     "print(\"\\nNaN value counts:\")\n",
     "print(processed_df[[\"price\", \"review_count\", \"review_rating\"]].isna().sum())"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Persist Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save the processed data to a JSON file line by line using pandas\n",
+    "output_path = \"data/processed_samples.jsonl\"\n",
+    "\n",
+    "# Save to JSONL format using pandas\n",
+    "processed_df.to_json(output_path, orient='records', lines=True)\n",
+    "\n",
+    "print(f\"Saved processed data to {output_path}\")"
+   ]
   }
  ],
  "metadata": {
