feat: Wrap up data logic

--- a/1_eda.ipynb
+++ b/1_eda.ipynb
@@ -2,30 +2,35 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "\n",
-    "import pandas as pd\n",
+    "from pathlib import Path\n",
+    "\n",
     "import altair as alt\n",
+    "import pandas as pd\n",
     "\n",
-    "from product_search.preprocessing import process_product_data\n",
+    "from superlinked_app.data_processing import process_amazon_dataset\n",
     "\n",
-    "pd.set_option('display.max_rows', 10)\n",
-    "pd.set_option('display.max_columns', 20)"
+    "pd.set_option(\"display.max_rows\", 10)\n",
+    "pd.set_option(\"display.max_columns\", 20)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# df = pd.read_json('data/esci.json', lines=True)\n",
-    "df = pd.read_json('data/sample.json', lines=True)"
+    "DATA_PATH = Path(\"data\") / \"sample.json\"\n",
+    "assert DATA_PATH.exists(), (\n",
+    "    f\"Ddataset not found at '{DATA_PATH}'. \"\n",
+    "    \"Please run 'make download-and-process-sample-dataset' first to download and process the Amazon dataset.\"\n",
+    ")"
    ]
   },
   {
@@ -34,6 +39,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "df = pd.read_json(DATA_PATH, lines=True)\n",
     "df.head(2)"
    ]
   },
@@ -43,7 +49,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Basic information about the dataset\n",
     "print(\"=== Dataset Overview ===\")\n",
     "print(f\"Number of records: {len(df)}\")\n",
     "print(\"\\nColumns:\")\n",
@@ -56,7 +61,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Data types\n",
     "print(\"\\n=== Data Types ===\")\n",
     "df.dtypes"
    ]
@@ -67,7 +71,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Total number of records\n",
     "print(\"\\n=== Total Records ===\")\n",
     "total_records = len(df)\n",
     "print(f\"Total number of records in dataset: {total_records:,}\")\n"
@@ -79,7 +82,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Check for missing values\n",
     "print(\"\\n=== Missing Values ===\")\n",
     "missing_values = df.isnull().sum()\n",
     "print(missing_values[missing_values > 0])  # Only show columns with missing values\n",
@@ -92,9 +94,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Distribution of product types\n",
     "print(\"\\n=== Product Type Distribution ===\")\n",
-    "type_dist = df['type'].value_counts()\n",
+    "type_dist = df[\"type\"].value_counts()\n",
     "print(type_dist)"
    ]
   },
@@ -104,13 +105,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "chart = alt.Chart(df.reset_index()).mark_bar().encode(\n",
-    "    x=alt.X('type:N', title='Type'),\n",
-    "    y=alt.Y('count():Q', title='Count')\n",
-    ").properties(\n",
-    "    width=500,\n",
-    "    height=300,\n",
-    "    title='Distribution of Product Types'\n",
+    "chart = (\n",
+    "    alt.Chart(df.reset_index())\n",
+    "    .mark_bar()\n",
+    "    .encode(x=alt.X(\"type:N\", title=\"Type\"), y=alt.Y(\"count():Q\", title=\"Count\"))\n",
+    "    .properties(width=500, height=300, title=\"Distribution of Product Types\")\n",
     ")\n",
     "chart.show()"
    ]
@@ -121,9 +120,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Distribution of locales\n",
     "print(\"\\n=== Locale Distribution ===\")\n",
-    "locale_dist = df['locale'].value_counts()\n",
+    "locale_dist = df[\"locale\"].value_counts()\n",
     "print(locale_dist)"
    ]
   },
@@ -134,23 +132,21 @@
    "outputs": [],
    "source": [
     "# Create a DataFrame for the locale distribution\n",
-    "locale_df = pd.DataFrame({\n",
-    "    'locale': locale_dist.index,\n",
-    "    'count': locale_dist.values\n",
-    "})\n",
+    "locale_df = pd.DataFrame({\"locale\": locale_dist.index, \"count\": locale_dist.values})\n",
     "\n",
     "# Calculate percentage\n",
-    "locale_df['percentage'] = locale_df['count'] / locale_df['count'].sum() * 100\n",
+    "locale_df[\"percentage\"] = locale_df[\"count\"] / locale_df[\"count\"].sum() * 100\n",
     "\n",
     "# Create donut chart\n",
-    "chart = alt.Chart(locale_df).mark_arc(innerRadius=50).encode(\n",
-    "    theta=alt.Theta(field='count', type='quantitative'),\n",
-    "    color=alt.Color(field='locale', type='nominal'),\n",
-    "    tooltip=['locale', 'percentage']\n",
-    ").properties(\n",
-    "    width=400,\n",
-    "    height=400,\n",
-    "    title='Distribution of Locales'\n",
+    "chart = (\n",
+    "    alt.Chart(locale_df)\n",
+    "    .mark_arc(innerRadius=50)\n",
+    "    .encode(\n",
+    "        theta=alt.Theta(field=\"count\", type=\"quantitative\"),\n",
+    "        color=alt.Color(field=\"locale\", type=\"nominal\"),\n",
+    "        tooltip=[\"locale\", \"percentage\"],\n",
+    "    )\n",
+    "    .properties(width=400, height=400, title=\"Distribution of Locales\")\n",
     ")\n",
     "chart.show()"
    ]
@@ -161,11 +157,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Analyze ratings distribution\n",
     "print(\"\\n=== Ratings Statistics ===\")\n",
     "# Convert ratings to numeric, removing 'ratings' text and commas\n",
-    "df['ratings_count'] = df['ratings'].str.extract('(\\d+(?:,\\d+)?)', expand=False).str.replace(',', '').astype(float)\n",
-    "print(df['ratings_count'].describe())"
+    "df[\"ratings_count\"] = (\n",
+    "    df[\"ratings\"]\n",
+    "    .str.extract(\"(\\d+(?:,\\d+)?)\", expand=False)\n",
+    "    .str.replace(\",\", \"\")\n",
+    "    .astype(float)\n",
+    ")\n",
+    "print(df[\"ratings_count\"].describe())"
    ]
   },
   {
@@ -174,17 +174,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "chart = alt.Chart(df).mark_bar().encode(\n",
-    "    x=alt.X('ratings_count:Q', \n",
-    "            bin=alt.Bin(maxbins=30),\n",
-    "            title='Number of Ratings'),\n",
-    "    y=alt.Y('count():Q',\n",
-    "            scale=alt.Scale(type='log'),\n",
-    "            title='Frequency')\n",
-    ").properties(\n",
-    "    width=500,\n",
-    "    height=300,\n",
-    "    title='Distribution of Number of Ratings'\n",
+    "chart = (\n",
+    "    alt.Chart(df)\n",
+    "    .mark_bar()\n",
+    "    .encode(\n",
+    "        x=alt.X(\"ratings_count:Q\", bin=alt.Bin(maxbins=30), title=\"Number of Ratings\"),\n",
+    "        y=alt.Y(\"count():Q\", scale=alt.Scale(type=\"log\"), title=\"Frequency\"),\n",
+    "    )\n",
+    "    .properties(width=500, height=300, title=\"Distribution of Number of Ratings\")\n",
     ")\n",
     "chart.show()"
    ]
@@ -195,11 +192,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Analyze star ratings\n",
     "print(\"\\n=== Star Ratings Statistics ===\")\n",
     "# Convert stars to numeric, extracting just the number\n",
-    "df['stars_numeric'] = df['stars'].str.extract('([\\d.]+)').astype(float)\n",
-    "print(df['stars_numeric'].describe())"
+    "df[\"stars_numeric\"] = df[\"stars\"].str.extract(\"([\\d.]+)\").astype(float)\n",
+    "print(df[\"stars_numeric\"].describe())"
    ]
   },
   {
@@ -208,13 +204,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "chart = alt.Chart(df).mark_boxplot().encode(\n",
-    "    x=alt.X('type:N', title='Type'),\n",
-    "    y=alt.Y('stars_numeric:Q', title='Star Rating')\n",
-    ").properties(\n",
-    "    width=600,\n",
-    "    height=300,\n",
-    "    title='Star Ratings Distribution by Product Type'\n",
+    "chart = (\n",
+    "    alt.Chart(df)\n",
+    "    .mark_boxplot()\n",
+    "    .encode(\n",
+    "        x=alt.X(\"type:N\", title=\"Type\"), y=alt.Y(\"stars_numeric:Q\", title=\"Star Rating\")\n",
+    "    )\n",
+    "    .properties(\n",
+    "        width=600, height=300, title=\"Star Ratings Distribution by Product Type\"\n",
+    "    )\n",
     ")\n",
     "chart.show()"
    ]
@@ -232,36 +230,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "processed_df = process_product_data(df, sample=False)\n",
+    "processed_df = process_amazon_dataset(df)\n",
     "processed_df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# we can look at the minimum and maximum values of Number-like attributes to properly set up the space\n",
-    "processed_df[[\"price\", \"review_count\", \"review_rating\"]].describe().loc[[\"min\", \"max\"]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Check for NaN values in numeric columns\n",
-    "print(\"\\nNaN value counts:\")\n",
-    "print(processed_df[[\"price\", \"review_count\", \"review_rating\"]].isna().sum())"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Persist Data"
+    "Check the number of valid remaining samples:"
    ]
   },
   {
@@ -270,13 +247,40 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Save the processed data to a JSON file line by line using pandas\n",
-    "output_path = \"data/processed_samples.jsonl\"\n",
-    "\n",
-    "# Save to JSONL format using pandas\n",
-    "processed_df.to_json(output_path, orient='records', lines=True)\n",
-    "\n",
-    "print(f\"Saved processed data to {output_path}\")"
+    "len(processed_df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can look at the minimum and maximum values of Number-like attributes to properly set up the space."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "processed_df[[\"price\", \"review_count\", \"review_rating\"]].describe().loc[[\"min\", \"max\"]]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Check for NaN values in numeric columns."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"\\nNaN value counts:\")\n",
+    "print(processed_df[[\"price\", \"review_count\", \"review_rating\"]].isna().sum())"
    ]
   }
  ],
