feat: Add streamlit UI and categorical variable example

--- a/1_eda.ipynb
+++ b/1_eda.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,6 +254,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Let's take a quick look at our categories:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "categories = set()\n",
+    "for category_list in processed_df[\"category\"]:\n",
+    "    categories.update(category_list)\n",
+    "categories"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(categories)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "We can look at the minimum and maximum values of Number-like attributes to properly set up the space."
    ]
   },
@@ -280,7 +308,7 @@
    "outputs": [],
    "source": [
     "print(\"\\nNaN value counts:\")\n",
-    "print(processed_df[[\"price\", \"review_count\", \"review_rating\"]].isna().sum())"
+    "print(processed_df[[\"category\", \"price\", \"review_count\", \"review_rating\"]].isna().sum())"
    ]
   }
  ],
