--- a/3_tabular_semantic_search_text_to_sql.ipynb
+++ b/3_tabular_semantic_search_text_to_sql.ipynb
@@ -9,7 +9,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m2024-12-11 18:15:51.463\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36msuperlinked_app.config\u001b[0m:\u001b[36m<module>\u001b[0m:\u001b[36m9\u001b[0m - \u001b[1mLoading '.env' file from: /Users/pauliusztin/Documents/01_projects/hands-on-retrieval/.env\u001b[0m\n"
+      "\u001b[32m2024-12-12 18:33:52.629\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36msuperlinked_app.config\u001b[0m:\u001b[36m<module>\u001b[0m:\u001b[36m9\u001b[0m - \u001b[1mLoading '.env' file from: /Users/pauliusztin/Documents/01_projects/hands-on-retrieval/.env\u001b[0m\n"
      ]
     }
    ],
@@ -258,7 +258,7 @@
     }
    ],
    "source": [
-    "df = pd.read_json(settings.PROCESSED_DATASET_PATH, lines=True)\n",
+    "df = pd.read_json(settings.PROCESSED_DATASET_PATH, lines=True).drop(columns=['category'])\n",
     "df.head()"
    ]
   },
@@ -378,7 +378,7 @@
     {
      "data": {
       "text/markdown": [
-       "**Node ID:** 92b1a07a-ac84-4da8-aab3-d562fe52edaf<br>**Similarity:** None<br>**Text:** <br>**Metadata:** {'title': 'All Aboard! New York: A City Primer', 'price': 9.99}<br>"
+       "**Node ID:** fe83bde8-54c6-46a7-bd31-7661bab4f8a8<br>**Similarity:** None<br>**Text:** <br>**Metadata:** {'title': 'All Aboard! New York: A City Primer', 'price': 9.99}<br>"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -390,7 +390,7 @@
     {
      "data": {
       "text/markdown": [
-       "**Node ID:** 924225f0-acca-4e27-9edd-41534b4a54a2<br>**Similarity:** None<br>**Text:** <br>**Metadata:** {'title': 'Feminist Baby (Feminist Baby, 4)', 'price': 10.59}<br>"
+       "**Node ID:** 5ab49fa1-e254-4031-93bd-30dd0921c4ae<br>**Similarity:** None<br>**Text:** <br>**Metadata:** {'title': 'Feminist Baby (Feminist Baby, 4)', 'price': 10.59}<br>"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -402,7 +402,7 @@
     {
      "data": {
       "text/markdown": [
-       "**Node ID:** 0c2201c5-8c0a-403a-875a-92903efc509f<br>**Similarity:** None<br>**Text:** <br>**Metadata:** {'title': 'The Mindful Dragon: A Dragon Book about Mindfulness. Teach Your Dragon To Be Mindful. A Cute Children Story to Teach Kids about Mindfulness, Focus and Peace. (My Dragon Books)', 'price': 11.69}<br>"
+       "**Node ID:** cc2142f6-58bf-44ee-9da5-e1df181c0d13<br>**Similarity:** None<br>**Text:** <br>**Metadata:** {'title': 'The Mindful Dragon: A Dragon Book about Mindfulness. Teach Your Dragon To Be Mindful. A Cute Children Story to Teach Kids about Mindfulness, Focus and Peace. (My Dragon Books)', 'price': 11.69}<br>"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -428,7 +428,7 @@
     {
      "data": {
       "text/markdown": [
-       "**Node ID:** 21ef7ca7-72b0-407f-8f30-6b02b2b91cdc<br>**Similarity:** None<br>**Text:** <br>**Metadata:** {'title': 'Stables: Beautiful Paddocks, Horse Barns, and Tack Rooms', 'price': 53.1, 'review_rating': 4.7}<br>"
+       "**Node ID:** bbb01131-a9ca-4b8f-a06a-e5b713bbe0ff<br>**Similarity:** None<br>**Text:** <br>**Metadata:** {'title': 'Stables: Beautiful Paddocks, Horse Barns, and Tack Rooms', 'price': 53.1, 'review_rating': 4.7}<br>"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -440,7 +440,7 @@
     {
      "data": {
       "text/markdown": [
-       "**Node ID:** e8f41cdf-af01-4134-9bf1-40a135be8ec4<br>**Similarity:** None<br>**Text:** <br>**Metadata:** {'title': 'The Mindful Dragon: A Dragon Book about Mindfulness. Teach Your Dragon To Be Mindful. A Cute Children Story to Teach Kids about Mindfulness, Focus and Peace. (My Dragon Books)', 'price': 11.69, 'review_rating': 4.7}<br>"
+       "**Node ID:** a0c8a2f9-595b-4fb4-b140-0a0bf68f436f<br>**Similarity:** None<br>**Text:** <br>**Metadata:** {'title': 'The Mindful Dragon: A Dragon Book about Mindfulness. Teach Your Dragon To Be Mindful. A Cute Children Story to Teach Kids about Mindfulness, Focus and Peace. (My Dragon Books)', 'price': 11.69, 'review_rating': 4.7}<br>"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -452,7 +452,7 @@
     {
      "data": {
       "text/markdown": [
-       "**Node ID:** 95f86c04-2b9b-4145-b851-be4931b9b487<br>**Similarity:** None<br>**Text:** <br>**Metadata:** {'title': 'Build Your Running Body (A Total-Body Fitness Plan for All Distance Runners, from Milers to Ultramarathoners—Run Farther, Faster, and Injury-Free)', 'price': 13.49, 'review_rating': 4.7}<br>"
+       "**Node ID:** c1b7b9c7-1ceb-43ee-b7b9-b93990352772<br>**Similarity:** None<br>**Text:** <br>**Metadata:** {'title': 'Build Your Running Body (A Total-Body Fitness Plan for All Distance Runners, from Milers to Ultramarathoners—Run Farther, Faster, and Injury-Free)', 'price': 13.49, 'review_rating': 4.7}<br>"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -478,7 +478,7 @@
     {
      "data": {
       "text/markdown": [
-       "**Node ID:** 15713c72-c930-4eb0-90b3-2ad617e3da6b<br>**Similarity:** None<br>**Text:** <br>**Metadata:** {'title': 'Stables: Beautiful Paddocks, Horse Barns, and Tack Rooms', 'review_count': 100, 'price': 53.1}<br>"
+       "**Node ID:** 14d164c1-9926-486e-8616-4e945a345174<br>**Similarity:** None<br>**Text:** <br>**Metadata:** {'title': 'Stables: Beautiful Paddocks, Horse Barns, and Tack Rooms', 'review_count': 100, 'price': 53.1}<br>"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -490,7 +490,7 @@
     {
      "data": {
       "text/markdown": [
-       "**Node ID:** 285e8590-5b71-4bd9-b81a-ae6125a9bcf4<br>**Similarity:** None<br>**Text:** <br>**Metadata:** {'title': 'The Mindful Dragon: A Dragon Book about Mindfulness. Teach Your Dragon To Be Mindful. A Cute Children Story to Teach Kids about Mindfulness, Focus and Peace. (My Dragon Books)', 'review_count': 623, 'price': 11.69}<br>"
+       "**Node ID:** b9a67ec0-7101-446d-b36c-bb8435442123<br>**Similarity:** None<br>**Text:** <br>**Metadata:** {'title': 'The Mindful Dragon: A Dragon Book about Mindfulness. Teach Your Dragon To Be Mindful. A Cute Children Story to Teach Kids about Mindfulness, Focus and Peace. (My Dragon Books)', 'review_count': 623, 'price': 11.69}<br>"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -502,7 +502,7 @@
     {
      "data": {
       "text/markdown": [
-       "**Node ID:** 211e96fb-f435-49d3-a952-41209d479280<br>**Similarity:** None<br>**Text:** <br>**Metadata:** {'title': 'Build Your Running Body (A Total-Body Fitness Plan for All Distance Runners, from Milers to Ultramarathoners—Run Farther, Faster, and Injury-Free)', 'review_count': 573, 'price': 13.49}<br>"
+       "**Node ID:** 094e44be-bf37-4d56-9d9d-3045ffbc6004<br>**Similarity:** None<br>**Text:** <br>**Metadata:** {'title': 'Build Your Running Body (A Total-Body Fitness Plan for All Distance Runners, from Milers to Ultramarathoners—Run Farther, Faster, and Injury-Free)', 'review_count': 573, 'price': 13.49}<br>"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -514,7 +514,7 @@
     {
      "data": {
       "text/markdown": [
-       "**Node ID:** 799f5a70-47c3-40af-b96a-be80fc1ccfa1<br>**Similarity:** None<br>**Text:** <br>**Metadata:** {'title': 'All Aboard! New York: A City Primer', 'review_count': 74, 'price': 9.99}<br>"
+       "**Node ID:** 2f8c362a-f7ea-4643-8986-107d0ba7ea5b<br>**Similarity:** None<br>**Text:** <br>**Metadata:** {'title': 'All Aboard! New York: A City Primer', 'review_count': 74, 'price': 9.99}<br>"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -526,7 +526,7 @@
     {
      "data": {
       "text/markdown": [
-       "**Node ID:** 38440887-0a63-4915-abe3-8fad6fd0ad10<br>**Similarity:** None<br>**Text:** <br>**Metadata:** {'title': 'The Rise: Creativity, the Gift of Failure, and the Search for Mastery', 'review_count': 204, 'price': 13.79}<br>"
+       "**Node ID:** a3c0a9e4-c3b5-482e-853f-d66ac38f7787<br>**Similarity:** None<br>**Text:** <br>**Metadata:** {'title': 'The Rise: Creativity, the Gift of Failure, and the Search for Mastery', 'review_count': 204, 'price': 13.79}<br>"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
