feat: Fix data preprocessing

--- a/1_eda.ipynb
+++ b/1_eda.ipynb
@@ -14,8 +14,6 @@
     "import altair as alt\n",
     "import pandas as pd\n",
     "\n",
-    "from superlinked_app.data_processing import process_amazon_dataset\n",
-    "\n",
     "pd.set_option(\"display.max_rows\", 10)\n",
     "pd.set_option(\"display.max_columns\", 20)"
    ]
@@ -221,6 +219,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Final columns of interest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "columns_to_keep = [\n",
+    "        \"asin\",\n",
+    "        \"type\",\n",
+    "        \"category\",\n",
+    "        \"title\",\n",
+    "        \"description\",\n",
+    "        \"stars\",\n",
+    "        \"ratings\",\n",
+    "        \"price\",\n",
+    "        \"locale\"\n",
+    "    ]\n",
+    "df[df[\"locale\"] == \"us\"][columns_to_keep].head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     " # EDA on the processed data"
    ]
   },
@@ -230,6 +255,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from superlinked_app.data_processing import process_amazon_dataset\n",
+    "\n",
     "processed_df = process_amazon_dataset(df)\n",
     "processed_df.head()"
    ]
