docs: Fill in README

--- a/1_eda.ipynb
+++ b/1_eda.ipynb
@@ -1,6 +1,24 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exploratory data analysis (EDA) for the Amazon ESCI dataset\n",
+    "\n",
+    "In this notebook, we will explore the raw and processed Amazon dataset, before loading it into Superlinked and Mongo vector DB.\n",
+    "\n",
+    "🔗 More on the [ESCI-S: extended metadata for Amazon ESCI dataset](https://github.com/shuttie/esci-s?tab=readme-ov-file)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Imports"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -19,8 +37,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Load raw dataset"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,6 +64,13 @@
    "source": [
     "df = pd.read_json(DATA_PATH, lines=True)\n",
     "df.head(2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exploring the raw dataset"
    ]
   },
   {
@@ -219,7 +251,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Final columns of interest"
+    "### Final columns of interest used in the processed dataset"
    ]
   },
   {
@@ -246,7 +278,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " # EDA on the processed data"
+    " ## Processing the dataset"
    ]
   },
   {
@@ -275,6 +307,13 @@
    "outputs": [],
    "source": [
     "len(processed_df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exploring the processed dataset"
    ]
   },
   {
