--- a/3_tabular_semantic_search_text_to_sql.ipynb
+++ b/3_tabular_semantic_search_text_to_sql.ipynb
@@ -1,6 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Text-to-SQL solution on top of Amazon products\n",
+    "\n",
+    "In this notebook we will explore what it takes to implement a text-to-SQL solution on top of our Amazon dataset using LlamaIndex."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Imports"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -35,7 +51,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Create Database Schema"
+    "## Create Database Schema"
    ]
   },
   {
@@ -99,7 +115,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Define SQL Database\n",
+    "## Define SQL Database\n",
     "\n",
     "We first define our SQLDatabase abstraction (a light wrapper around SQLAlchemy)."
    ]
@@ -317,7 +333,6 @@
     }
    ],
    "source": [
-    "# view current table\n",
     "stmt = select(\n",
     "    product_table.c.asin,\n",
     "    product_table.c.type,\n",
@@ -344,7 +359,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Text-to-SQL Retriever\n",
+    "## Text-to-SQL Retriever\n",
     "\n",
     "Let's use the LlamaIndex SQL retriever to map text to SQL instructions and retrieve data from the SQLite table. "
    ]
@@ -548,9 +563,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Plug in the RetrieverQueryEngine\n",
+    "## Plug in the RetrieverQueryEngine\n",
     "\n",
-    "We compose our SQL Retriever with our standard RetrieverQueryEngine to synthesize a response. The result is similar to LlamaIndex's NLSQLTableQueryEngine class, which does both retrieval and synthetization of the response."
+    "We compose our SQL Retriever with our standard RetrieverQueryEngine to synthesize a response. The result is similar to LlamaIndex's `NLSQLTableQueryEngine` class, which does both retrieval and synthetization of the response."
    ]
   },
   {
