docs: Update INSTALL guide

--- a/1_eda.ipynb
+++ b/1_eda.ipynb
@@ -376,6 +376,15 @@
     "print(\"\\nNaN value counts:\")\n",
     "print(processed_df[[\"category\", \"price\", \"review_count\", \"review_rating\"]].isna().sum())"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Next Steps\n",
+    "\n",
+    "Continue with the **2_tabular_semantic_search_superlinked.ipynb** Notebook to learn how to build a tabular semantic search module with Superlinked."
+   ]
   }
  ],
  "metadata": {
