--- a/2_tabular_semantic_search_superlinked.ipynb
+++ b/2_tabular_semantic_search_superlinked.ipynb
@@ -1409,6 +1409,15 @@
    "source": [
     "results.to_pandas()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Next Steps\n",
+    "\n",
+    "Continue with the **3_tabular_semantic_search_text_to_sql.ipynb** Notebook to learn how to build a tabular semantic search module with text-to-SQL techniques."
+   ]
   }
  ],
  "metadata": {
