--- a/3_tabular_semantic_search_text_to_sql.ipynb
+++ b/3_tabular_semantic_search_text_to_sql.ipynb
@@ -610,6 +610,15 @@
    "source": [
     "print(str(response))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Next Steps\n",
+    "\n",
+    "Go to the **INSTALL_AND_USAGE** document to learn how to start the MongoDB vector index, Superlinked RESTful API and Streamlit frontend."
+   ]
   }
  ],
  "metadata": {
